# python-tutorials

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create
tutorials/decorators/: basics.py  main.py
tutorials/pydantic_demo/: main.py  models.py  settings_management.py  validate_call.py
tutorials/restapi_demo/: consuming_api.py  fastapi_app.py  flask_app.py
