[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = "Collection of Python tutorials and practical use cases for learning and reference."
authors = ["Tobías Chavarría <tobias.chavarria.castro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
