[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = "Collection of Python tutorials and practical use cases for learning and reference."
authors = ["Tobías Chavarría <tobias.chavarria.castro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
